added new files

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@ name: 'my_dbt_project'
 version: '1.0.0'
 config-version: 2
 
-profile: 'default'
+profile: 'athena'
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
