--- a/profiles.yml
+++ b/profiles.yml
@@ -1,5 +1,4 @@
-# DBT profiles.yml for Spark connection. Ensure environment variables are set for SPARK_HOST, SPARK_PORT, SPARK_USER, SPARK_SCHEMA.
-default:
+spark_glue_iceberg:
   target: dev
   outputs:
     dev:
@@ -12,17 +11,10 @@ default:
       threads: 4
       connect_timeout: 60
       retry_all: true
-
-athena:
-  target: dev
-  outputs:
-    dev:
-      type: athena
-      s3_staging_dir: s3://dbt-core-athena-test-bucket/dbt-output/
-      region_name: us-east-2
-      database: AwsDataCatalog
-      schema: test
-      data_catalog: AwsDataCatalog
-      aws_access_key_id: "{{ env_var('AWS_ACCESS_KEY_ID') }}"
-      aws_secret_access_key: "{{ env_var('AWS_SECRET_ACCESS_KEY') }}"
-      # Or use IAM roles if running on ECS 
+      session_properties:
+        spark.sql.catalog.glue_catalog: org.apache.iceberg.spark.SparkCatalog
+        spark.sql.catalog.glue_catalog.warehouse: s3://<your-bucket>/warehouse/
+        spark.sql.catalog.glue_catalog.catalog-impl: org.apache.iceberg.aws.glue.GlueCatalog
+        spark.sql.catalog.glue_catalog.io-impl: org.apache.iceberg.aws.s3.S3FileIO
+        spark.sql.catalog.glue_catalog.lock-impl: org.apache.iceberg.aws.glue.DynamoLockManager
+        spark.sql.catalog.glue_catalog.lock.table: myGlueLockTable 
