--- a/profiles.yml
+++ b/profiles.yml
@@ -4,16 +4,16 @@ spark_glue_iceberg:
     dev:
       type: spark
       method: thrift
-      host: "{{ env_var('SPARK_HOST') }}"
-      port: "{{ env_var('SPARK_PORT') | as_number }}"
-      user: "{{ env_var('SPARK_USER') }}"
-      schema: "{{ env_var('SPARK_SCHEMA') }}"
+      host: "44.223.27.73"
+      port: "10000"
+      user: "hadoop"
+      schema: "default"
       threads: 4
       connect_timeout: 60
       retry_all: true
       session_properties:
         spark.sql.catalog.glue_catalog: org.apache.iceberg.spark.SparkCatalog
-        spark.sql.catalog.glue_catalog.warehouse: s3://<your-bucket>/warehouse/
+        spark.sql.catalog.glue_catalog.warehouse: s3://everag-dev-config/iceberg-config/
         spark.sql.catalog.glue_catalog.catalog-impl: org.apache.iceberg.aws.glue.GlueCatalog
         spark.sql.catalog.glue_catalog.io-impl: org.apache.iceberg.aws.s3.S3FileIO
         spark.sql.catalog.glue_catalog.lock-impl: org.apache.iceberg.aws.glue.DynamoLockManager
