--- a/profiles.yml
+++ b/profiles.yml
@@ -4,8 +4,8 @@ spark_glue_iceberg:
     dev:
       type: spark
       method: thrift
-      host: "44.223.27.73"
-      port: 10000
+      host: "ec2-18-212-249-194.compute-1.amazonaws.com"
+      port: 10001
       user: "hadoop"
       schema: "default"
       threads: 4
