--- a/profiles.yml
+++ b/profiles.yml
@@ -7,7 +7,8 @@ spark_glue_iceberg:
       host: "ec2-34-203-225-227.compute-1.amazonaws.com"
       port: 10000
       user: "hadoop"
-      schema: "default"
+      schema: "bronze"
+      database: "bronze"
       threads: 4
       connect_timeout: 60
       retry_all: true
