--- a/profiles.yml
+++ b/profiles.yml
@@ -8,7 +8,7 @@ spark_glue_iceberg:
       port: 10000
       user: "hadoop"
       schema: "bronze"
-      database: "bronze"
+      organization: glue_catalog     
       threads: 4
       connect_timeout: 60
       retry_all: true
